--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta charset="UTF-8">
+  <title>Rained - When the rain is over</title>
   <link rel="stylesheet" href="//unpkg.com/docsify/themes/vue.css">
+
 </head>
 <body> 
   <div id="app"></div>
